fix toggle on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 :root {
   /* Header Height */
   --header-height: 125px;
-  --header-height-mobile: 70px;
+  --header-height-mobile: 87px;
 
   /* Sidebar Width */
   --sidebar-width: 300px;
