--- a/src/layouts/Sidebar.css
+++ b/src/layouts/Sidebar.css
@@ -111,12 +111,13 @@
 
   /* 토글 버튼 표시 */
   .sidebar-toggle {
+    z-index: 999;
     display: flex;
     position: absolute;
-    right: -50px;
+    right: 0px;
     top: 0;
     width: 50px;
-    height: 100px;
+    height: 100%;
     background: white;
     border: none;
     box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
